--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -60,6 +60,7 @@
 
     "custom/niri_window": {
         "format": "{} ",
+        "max-length": 60,
         "interval": 1, 
         "exec": "niri msg -j windows | jq -r '(.[] | select(.is_focused) | .title) // \"\"'"
     },
